--- a/balog.html
+++ b/balog.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>HTML kvíz – 5 kérdés</title>
+  <title>HTML kvíz – 5 kérdéss</title>
   <style>
     body { font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial; max-width:800px; margin:40px auto; padding:0 16px; line-height:1.6; color:#111; }
     header { text-align:center; margin-bottom:30px; }
@@ -99,3 +99,4 @@
   </script>
 </body>
 </html>
+
